# tdd_tutorial_in_c-

soundex/: CMakeLists.txt
soundex/include/: soundex.hpp
soundex/test/: soundex_test.cpp
